app/static/css/site.styl
$bg-color = #f4f4f4
$text-color = #596066
$header-text = #a3a3a3
$border-color = #e7e7e7
$warn-color = #ff0000
$offer-color = #BBEEFF
$request-color = #89DDDD
$filter-background = #585F65
$filter-item-selected = #444D54
$dialog-bg-color = rgba(255, 255, 255, 0.75)
$warning-bg-color = rgba(185, 74, 72, 0.69)
$std-border-radius = 10px

vendor(prop, args)
  -webkit-{prop} args
  -moz-{prop} args
  -ms-{prop} args
  -o-{prop} args
  {prop} args

border-radius()
  vendor('border-radius', arguments)

box-shadow()
  vendor('box-shadow', arguments)

::-webkit-input-placeholder
  font-style italic

::-moz-placeholder
  font-style italic

:-ms-input-placeholder
  font-style italic

/******************************************************************************
 * Bootstrap overloads
 */

.navbar-default
  background-color $bg-color

.navbar
  margin-bottom 0

body
  background-color $bg-color

.form-group
  margin-bottom 5px

.btn
  border-radius $std-border-radius
  color $text-color

.narrow .container
  max-width 970px

.alert
  border-radius 15px

.dropdown-menu
  .btn-link
    color #333
    padding 3px 20px
    display block
    border-radius 0
    text-align left
    width 100%
  .btn-link:focus, .btn-link:hover
    color #262626
    text-decoration none
    background-color #f5f5f5



.btn:focus
  outline: none

pre
  word-break: normal

/******************************************************************************
 * Site styles
 */

body
  color $text-color

h1, h2, h3, h4
  color $header-text

#market.market
  .delete-item
    display none

.hr-no-margin
  margin-bottom: 0
  margin-top: 0

.center-content
  text-align: center

.full-width
  width: 100%!important

.filter-fixed-width
  width: 70px

.align-right
  text-align: right

.errorlist
  padding 0
  li
    color $warn-color
    list-style none

.col-spacing-bottom
  margin-bottom: 15px

select.input-extra-height
  height: 90px

.item_container:hover
  cursor: pointer

.item-contents
  max-height: 101px
  overflow: hidden

.multi-line-text
  white-space: pre-wrap

.message-well
  background-color
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05)
  padding: 9px
  height: 80px
  overflow: hidden

.hero-text
  color #fff
  font-size 2em
  margin 20px 0

.backstretch
  background-color rgba(0, 0, 0, 0.63)

.dialog
  h1
    margin-top 0
    font-size 2em
    color #59606A
  h2
    color #59606A
  h3
    color #59606A
  h4
    color #59606A
  a
    color $text-color
    text-decoration underline
  a.btn
    text-decoration none
  padding 15px
  background-color $dialog-bg-color
  border-radius $std-border-radius

.footer-logos
  .middle
    text-align center
  .right
    text-align right

.navbar-admin
  background-color: red

.navavatar
  margin-top: 5px
  img
    width: 40px
    height: 40px
    border-radius 50%
  a 
    margin: 0 !important
    padding: 0 !important

.footer-nav
  z-index: 5000
  background: rgba(20,20,20,0.95)
  color: #fff
  text-align: center
  margin-left: -10px
  padding-right: 10px
  border-color: #596066
  text-align: center
  .navbar-nav
    float: none
  ul 
    display: inline-block
  .footer-nav-content
    height: 45px
    a 
      line-height: 45px
      color: #fff
      text-decoration: none
    a:hover
      color: $text-color


.sign-up-form, .public
  input[type=text], input[type=email], input[type=number], input[type=password]
    border-radius $std-border-radius
    height 45px
  label
    font-weight normal

.private
  margin-top 20px
  margin-bottom 20px

.public
  margin-top 20px
  margin-bottom 20px
  .warning
    padding 15px
    margin-bottom 20px
    background-color $warning-bg-color
    border-radius $std-border-radius

.social-sign-up .dialog
  margin-bottom 10px
  a
    position relative
    img
      vertical-align text-bottom
      position absolute
      left 0
    color $text-color
    padding-left 30px

.exchange-banner
  background: url('../images/backgrounds/background_4.jpg') no-repeat
  background-size: 100%;
  background-color: #FFF
  h1
    color: $text-color
  .exchange-opacity
    //background-color: rgba(255, 255, 255, 0.3)
    height: 300px
/*    .dialog
      border-radius 0
*/

#settingform
  label 
    margin-top 5px
    margin-bottom 9px

.settings-change-avatar
  text-align: center
  margin-top: 10px
  img
    border-radius 50%
  h2
    margin-top 0
  .tag-line
    margin-bottom: 10px    


.profile-item
  margin-bottom: 10px

.profile-label
  font-weight: bold


.message-text
  margin-bottom: 10px

.market-action:hover
  cursor: pointer

.filter-banner-spacer
  background-color: #FFF
  height: 2px

.grey-spacer
  height: 32px

.header-spacer
  height: 10px

.filter-banner-spacer-black
  background-color: #444d54
  height: 2px

.exchange-filter
  color: #FFF
  background-color: $filter-background
  padding-bottom: 10px
  min-height: 40px
  .market-filter-main
    position: relative
    .market-filter-border
      border-right: 1px solid #FFF
      position: absolute
      //margin-top: 10%
      height: 100%
      right: 0
    .market-action
      margin-bottom: 10px
    .first
      margin-top: 35px
    .market-action:hover
      cursor: pointer
  .filter-title
    text-align: center
    margin-bottom: 10px
    margin-top: 10px
  .filter-show
    margin-top:10px
    text-align: right
  .filter-tag
    .btn-success
      color: #FFF
      background-color: $filter-item-selected
      border-color: $filter-item-selected
    .btn-success:hover,
    .btn-success:focus,
    .btn-success:active,
    .btn-success.active,
    .open .dropdown-toggle.btn-success
      border-color: #3a3a3a;

.market-search-box
  margin-top: 10px
  margin-bottom: 10px
  .input-group
    .form-control
      border-radius 10px 0 0 10px !important

.market-item-card
  border-radius 5px
  background-color: #FFF
  margin-bottom: 15px
  box-shadow: 1px 1px 6px 0px rgba(50, 50, 50, 0.5);
  padding: 3px
  .dropdown-menu
    left: auto
    right: 0
    top: 15px
  .item-menu
    margin-right: 5px
    cursor: pointer
  .item-header
    font-weight: bold
    padding: 5px 3px 3px 5px
    border-radius 5px
    margin-bottom: 5px
    height: 30px
    span
      font-size: 10px
    a
      color: $text-color
    .item-header-clickable
      float:left
      width:85%
      height: 30px
  .request
    background-color: $request-color
  .offer
    background-color: $offer-color
  .user
    background-color: $request-color
  .item-title
    padding: 5px
    font-weight: bold
    .item-icon
      float: left
      width: 50px
      height: 50px
      margin-right: 5px
    .request
      background: url('../images/request-button-50x50.png') no-repeat
    .offer
      background: url('../images/offer-button-50x50.png') no-repeat
  .item-body
    padding: 5px
  .item-tags
    font-size: 10px
    padding: 5px
    .item-comment-count
      margin-bottom: 5px
    .btn-xs
      font-size: 10px
      color: #000
      background-color: #eeeeee
      border-color: #cccccc
      margin-bottom: 3px

.user-card
  .item-title
    text-align: center
    img
      border-radius: 50%

#postman_message
  #back
    visibility hidden;

#conversation
  background white
  .panel-footer
    background white

.market-place-item
  width: 32.4%
  margin-left: 4px;
  margin-right: 4px;

#marketitemdialog
  .market-place-item
    width 100%

.messageavatar>img
  border-radius 50%

.comment
  min-height 100px

pre
  font-family Helvetica, Arial, sans-serif;
  font-size 14px
  background-color white

#singleItem
  margin-top 10px
  .market-place-item
    width 100%
    margin 0 auto
  .routehref
    cursor default


#marketitem_comments
  margin-top 70px

#marketitem_comment_form
  display none


.routehref:link
  text-decoration: none
  color $text-color


.routehref:visited
  text-decoration: none
  color $text-color

.routehref:active
  text-decoration: none
  color $text-color

.routehref:hover
  text-decoration: none
  color $text-color

.profile-avatar
  text-align: center
  img
    border-radius: 50%

#backtothemarket 
  visibility hidden


#issues_place, #countries_place, #skills_place, #request_issues_place ,#request_countries_place
  .input-sm
    height 35px
    padding 10px 12px
    font-size 14px

